--- a/Flight Ticket Price Prediction Portfolio .ipynb
+++ b/Flight Ticket Price Prediction Portfolio .ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sagar Mestry\\Miniconda3\\lib\\site-packages\\statsmodels\\tools\\_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "C:\\Users\\khizar Mulla\\Miniconda3\\lib\\site-packages\\statsmodels\\tools\\_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
       "  import pandas.util.testing as tm\n"
      ]
     }
