Update Flight Ticket Price Prediction Portfolio .ipynb

--- a/Flight Ticket Price Prediction Portfolio .ipynb
+++ b/Flight Ticket Price Prediction Portfolio .ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv(r'C:\\Users\\Sagar Mestry\\Downloads\\Train_data.csv')"
+    "train_data = pd.read_csv(r'C:\\Users\\Khizar Mulla\\Downloads\\Train_data.csv')"
    ]
   },
   {
@@ -2739,7 +2739,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = pd.read_csv(r'C:\\Users\\Sagar Mestry\\Downloads\\Test_data.csv')"
+    "test_data = pd.read_csv(r'C:\\Users\\Khizar Mulla\\Downloads\\Test_data.csv')"
    ]
   },
   {
